chore : [FE] 하단 버튼 수정

--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -11,9 +11,9 @@
     <body>
         <div id="header-placeholder"></div>
         <div class="container">
-        <div class="hd__inner1100">
+        <div class="hd__inner960">
             <div class="banner">
-                <h1>견적을 확인하고 싶은 업체를 선택해 주세요.</h1>
+                <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</ㅔ>
                 <p>스드메 견적을 간편하게 확인할 수 있어요</p>
             </div>
             <div class="tabs">
@@ -26,7 +26,7 @@
                     <div class="main">
                         <img src="../../assets/images/estimateDetails1.png" alt="Studio Image">
                         <div class="selected">
-                            <div class="content">
+                            <div class="content-main">
                                 <p class="content-bold">S 스튜디오</p>
                                 <p>서울특별시 서초구 신반포로 4길 7</p>
                             </div>
