fix: [FE] 2차 페이지 점검 수정

--- a/html/reservation/reservationCategory.html
+++ b/html/reservation/reservationCategory.html
@@ -65,7 +65,7 @@
 
         <!-- 다음 단계 버튼 -->
         <section class="btn">
-            <button class="btn-nxt"><a href="../../html/reservation/reservationSelectCompany.html">다음 단계로</a></button>
+            <a href="../../html/reservation/reservationSelectCompany.html"><button class="btn-nxt">다음 단계로</button></a>
         </section>   
     </div>
     <div id="footer-placeholder"></div>
