--- a/html/reservation/reservationSelectOptions.html
+++ b/html/reservation/reservationSelectOptions.html
@@ -181,7 +181,9 @@
                             <h6>야간 촬영</h6>
                             <p>17시 이후 부터 촬영 가능</p>
                         </div>
-                        <h5 class="select-options-price">220,000원</h5>
+                        <div class="option-price-div">
+                            <h5 class="select-options-price">220,000원</h5>
+                        </div>
                     </div>
                     <div class="select-option">
                         <div>
@@ -191,7 +193,9 @@
                             <h6>들러리 촬영</h6>
                             <p>스튜디오 촬영 / 본식 동반(1인)</p>
                         </div>
-                        <h5 class="select-options-price">110,000원</h5>
+                        <div class="option-price-div">
+                            <h5 class="select-options-price">110,000원</h5>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -199,8 +203,8 @@
 
         <!-- 다음 단계 버튼 -->
         <section class="btn">
-            <button class="btn-pre"><a href="../../html/reservation/reservationSelectCompany.html">이전</a></button>
-            <button class="btn-nxt"><a href="../../html/reservation/reservationSelectDate.html">다음 단계로</a></button>
+            <a href="../../html/reservation/reservationSelectCompany.html"><button class="btn-pre">이전</button></a>
+            <a href="../../html/reservation/reservationSelectDate.html"><button class="btn-nxt">다음 단계로</button></a>
         </section>
     </div>
     <div id="footer-placeholder"></div>
