--- a/html/visitReservation/visitReserveDate.html
+++ b/html/visitReservation/visitReserveDate.html
@@ -93,8 +93,8 @@
 
                     <!-- 버튼 -->
                     <section class="btn">
-                        <button class="btn-pre"><a href="../../html/weddingHall/weddingHallDetail.html">이전</a></button>
-                        <button class="btn-nxt"><a href="../../html/visitReservation/visitReserveExpectancy.html">다음 단계로</a></button>
+                        <a href="../../html/weddingHall/weddingHallDetail.html"><button class="btn-pre">이전</button></a>
+                       <a href="../../html/visitReservation/visitReserveExpectancy.html"> <button class="btn-nxt">다음 단계로</button></a>
                     </section>
 
                 </div>
