--- a/html/reservation/reservationSelectDate.html
+++ b/html/reservation/reservationSelectDate.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../css/common/reset.css" />
     <link rel="stylesheet" href="../../css/reservation/reservationSelectDate.css" />
     <script src="../../js/main/main.js"></script>
+    <script defer src="../../js/reservation/reservationSelectDate.js"></script>
     
 </head>
 <body>
@@ -64,7 +65,7 @@
 
                 <!-- 예약 시간대 -->
                 <div class="reserve-time">
-                    <h3><input type="checkbox" /> 가능한 일정만 보기</h3>
+                    <h3>예약 시간</h3>
                     <div class="time-slot">
                         <h4>10:00</h4>
                         <p>[웨딩촬영] 빌링스 스튜디오</p>
@@ -83,12 +84,6 @@
                     </div> 
                 </div>  
             </div>
-        </section>
-
-        <!-- 다음 단계 버튼 -->
-        <section class="btn">
-            <button class="btn-pre"><a href="../../html/reservation/reservationSelectOptions.html">이전</a></button>
-            <button class="btn-nxt"><a href="">다음 단계로</a></button>
         </section>
 
         <!-- 선택 목록 -->
@@ -115,7 +110,9 @@
                             <h6>야간 촬영</h6>
                             <p>17시 이후 부터 촬영 가능</p>
                         </div>
-                        <h5 class="options-price">220,000원</h5>
+                        <div class="option-price-div">
+                            <h5 class="select-options-price">220,000원</h5>
+                        </div>
                     </div>
                     <div class="select-option">
                         <div>
@@ -125,12 +122,20 @@
                             <h6>들러리 촬영</h6>
                             <p>스튜디오 촬영 / 본식 동반(1인)</p>
                         </div>
-                        <h5 class="select-options-price">110,000원</h5>
+                        <div class="option-price-div">
+                            <h5 class="select-options-price">110,000원</h5>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- 다음 단계 버튼 -->
+        <section class="btn">
+            <a href="../../html/reservation/reservationSelectOptions.html"><button class="btn-pre">이전</button></a>
+            <a href="../../html/reservation/reservationPayment.html"><button class="btn-nxt">다음 단계로</button></a>
+        </section>
     </div>
     <div id="footer-placeholder"></div>
 </body>
