--- a/html/visitReservation/visitReserveExpectancy.html
+++ b/html/visitReservation/visitReserveExpectancy.html
@@ -96,8 +96,8 @@
             
                     <!-- 버튼 -->
                     <section class="btn">
-                        <button class="btn-pre"><a href="../../html/visitReservation/visitReserveDate.html">이전</a></button>
-                        <button class="btn-nxt"><a href="../../html/visitReservation/visitReserveInfo.html">다음 단계로</a></button>
+                        <a href="../../html/visitReservation/visitReserveDate.html"><button class="btn-pre">이전</button></a>
+                        <a href="../../html/visitReservation/visitReserveInfo.html"><button class="btn-nxt">다음 단계로</button></a>
                     </section>
                 </div>
             </section>
