fix: [FE] myPage 디자인  수정

--- a/html/mypage/couplePage.html
+++ b/html/mypage/couplePage.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coupltPage</title>
+    <title>couplePage</title>
     <link rel="stylesheet" href="../../css/myPage/couplePage.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script defer src="../../js/main/main.js"></script>
     <script defer src="../../js/myPage/couplePage.js"></script>
   </head>
@@ -12,8 +16,84 @@
   <body>
     <div class="hd__inner1100">
       <!--1. section 1  -->
-      <section>
-        <div>test</div>
+      <div class="hd__inner900">
+        <section class="couplePage-header" id="couplePage-section1">
+          <div class="header-box">
+            <div class="header-text">
+              <h1>안녕하세요. 신랑 박서준 <span></span>신부 김유정님</h1>
+              <div class="v-line"></div>
+              <div>
+                <p>예약된 일정</p>
+                <p>3건</p>
+              </div>
+              <div class="v-line"></div>
+              <div>
+                <p>결혼식까지</p>
+                <p>D-400</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- 2. section 2 profile picture -->
+
+      <section class="couplePage-profile" id="couplePage-section2">
+        <div class="couplePage-profile-package">
+          <div class="groom">
+            <div class="profile-img">
+              <img
+                src="../../assets/images/BestPackage2.png"
+                alt="신랑 이미지"
+                id="groom-img"
+              />
+            </div>
+            <label>전화번호</label>
+            <div>
+              <img src="" alt="phone-img" />
+              <input type="" id="phone-Num-first" />
+              <input type="" id="phone-Num-middle" />
+              <input type="" id="phone-Num-end" />
+            </div>
+            <label for="">메일</label>
+            <div>
+              <img src="" alt="메일 이미지" />
+              <input type="text" id="email" />
+              <input type="text" id="url" />
+            </div>
+            <label for="">생일</label>
+            <div>
+              <img src="" alt="생일 이미지" />
+              <input type="text" name="" id="" />
+            </div>
+          </div>
+          <div class="bride">
+            <div class="profile-img">
+              <img
+                src="../../assets/images/BestPackage2.png"
+                alt="신부 이미지"
+                id="bride-img"
+              />
+            </div>
+            <label>전화번호</label>
+            <div>
+              <img src="http://www.w3.org/2000/svg" alt="phone-img" />
+              <input type="" id="phone-Num-first" />
+              <input type="" id="phone-Num-middle" />
+              <input type="" id="phone-Num-end" />
+            </div>
+            <label for="">메일</label>
+            <div>
+              <img src="" alt="메일 이미지" />
+              <input type="text" id="email" />
+              <input type="text" id="url" />
+            </div>
+            <label for="">생일</label>
+            <div>
+              <img src="" alt="생일 이미지" />
+              <input type="text" name="" id="" />
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
