fix : [FE] myPayment, mypage,wishList,LikeList 수정

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mypage</title>
+    <!-- 링크 -->
     <section class="link">
       <link rel="stylesheet" href="../../css/common/reset.css" />
       <link rel="stylesheet" href="../../css/mypage/mypage.css" />
@@ -20,6 +21,7 @@
             href="../../css/common/sidebar/sidebarMyPage.css"
         />
     </section>
+    <!-- 스크립트 -->
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
       <script defer src="../../js/mypage/mypage.js"></script>
