--- a/html/mypage/LikeList.html
+++ b/html/mypage/LikeList.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LikeList</title>
-    <link rel="stylesheet" href="../../css/myPage/LikeList.css" />
-    <link rel="stylesheet" href="../../css/common/reset.css" />
-    <script defer src="../../js/myPage/LikeList.js"></script>
-    <script defer src="../../js/main/main.js"></script>
+    <!-- 링크 -->
+    <section class="link">
+      <link rel="stylesheet" href="../../css/myPage/LikeList.css" />
+      <link rel="stylesheet" href="../../css/common/reset.css" />
+      <link
+        rel="stylesheet"
+        href="../../css/common/sidebar/sidebarMyPage.css"
+      />
+    </section>
+    <!-- 스크립트 -->
+    <section class="script">
+      <script defer src="../../js/myPage/LikeList.js"></script>
+      <script defer src="../../js/main/main.js"></script>
+      <script defer src="../../js/myPage/myPageMain.js"></script>
+    </section>
   </head>
   <div id="header-placeholder"></div>
   <body>
-    <div id="header-placeholder"></div>
     <div class="hd__inner1100">
+      <!-- display 구조 분류 -->
       <!-- 1.헤더 설명 -->
       <section class="List" id="LikeList-section1">
         <div class="List-content">
@@ -24,148 +35,155 @@
       <!-- 2.서치 바 기능 -->
       <section class="search-bar" id="LikeList-section2">
         <div class="List-search-bar">
-          <img src="" alt="searchImage" />
+          <img src="../../assets/images/search-icon.png" alt="searchImage" />
           <input type="search" id="List-search-box" />
           <button id="List-searh-button">Search</button>
         </div>
       </section>
-
-      <!-- 3. 카드 리스트 -->
-      <section class="Card-List" id="LikeList-section3">
-        <br /><br />
-        <div class="hd__inner900">
-          <div class="LikeList-Card-List">
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
-            </div>
-            <div class="LikeList-Card">
-              <img
-                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
-                alt="업체 이미지"
-              />
-              <ul>
-                <h3>로이 스튜디오</h3>
-                <h5>Roi Studio</h5>
-                <li>서울 특별시 강남구</li>
-                <li>촬영비:679,000원</li>
-                <li>최소보증: 150명</li>
-                <li>전화번호: 010-xxxx-xxxx</li>
-              </ul>
+      <div class="likeList-structure">
+        <div>
+          <!-- 2.5 사이드 바 -->
+          <section class="nav-bar" id="nav-bar">
+            <aside class="myPage-sidebar">
+              <div id="myPage-sidebar-placeholder"></div>
+            </aside>
+          </section>
+        </div>
+        <!-- 3. 카드 리스트 -->
+        <section class="Card-List" id="LikeList-section3">
+          <br /><br />
+          <div class="hd__inner960">
+            <div class="LikeList-Card-List">
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
+              <div class="LikeList-Card">
+                <img
+                  src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                  alt="업체 이미지"
+                />
+                <ul>
+                  <h3>로이 스튜디오</h3>
+                  <h5>Roi Studio</h5>
+                  <li>서울 특별시 강남구</li>
+                  <li>촬영비:679,000원</li>
+                  <li>최소보증: 150명</li>
+                  <li>전화번호: 010-xxxx-xxxx</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-      <!-- 4.페이지네이션 -->
-      <section class="pagegination" id="LikeList-section4"></section>
+        </section>
+      </div>
     </div>
   </body>
   <div id="footer-placeholder"></div>
