--- a/html/mypage/Wish_List.html
+++ b/html/mypage/Wish_List.html
@@ -3,27 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>partnersTopPicks</title>
-    <link rel="stylesheet" href="../../css/myPage/partnersTopPicks.css" />
+    <title>Wish List</title>
+    <link rel="stylesheet" href="../../css/myPage/Wish_List.css" />
 
     <script defer src="../../js/main/main.js"></script>
-    <script defer src="../../js/myPage/partnersTopPicks.js"></script>
+    <script defer src="../../js/myPage/Wish_List.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.min.js"></script>
   </head>
   <div id="header-placeholder"></div>
   <body>
     <!-- 1.헤더 설명 -->
-    <section class="partnersTopPicks-header" id="partnersTopPicks-section1">
+    <section class="Wish_List-header" id="Wish_List-section1">
       <h3>우리가 원하는 우리만의 목록</h3>
       <h1>너와 나의 Like List</h1>
       <img src="" alt="" />
     </section>
     <div class="hd__inner1100">
       <!-- 2.  팔로우 리스트  -->
-      <section
-        class="pzartnersTopPicks-followList"
-        id="partnersTopPicks-section2"
-      >
+      <section class="Wish_List-followList" id="Wish_List-section2">
         <div class="recent">
           <img src="../../assets/images/BestPackage4.png" alt="이미지" />
           <h2>Recent Studio</h2>
@@ -109,7 +106,7 @@
         </div>
       </section>
       <!-- 3. 추천 리스트(슬라이드) -->
-      <section class="partnersTopPicks-slide" id="partnersTopPicks-section3">
+      <section class="Wish_List-slide" id="Wish_List-section3">
         <h3>추천 팔로우 리스트</h3>
         <div class="slider-box-1">
           <!-- 슬라이더 메인 컨테이너 -->
