--- a/html/login/IDJoin.html
+++ b/html/login/IDJoin.html
@@ -10,9 +10,20 @@
     <div class = "join">
         <div>
         <h1>간편가입</h1>
-        <hr>
+            <div>
+                <table>
+                    <tr>
+                        <td style='background-color:black'></td>
+                        <td style='background-color:black'></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            
         </div>
         <br />
+        
         <div>
             <b>로그인에 사용할<br />아이디를 입력해주세요.</b>
             <br /> 
