--- a/html/reservation/reservationSelectCompany.html
+++ b/html/reservation/reservationSelectCompany.html
@@ -55,24 +55,24 @@
                 <img id="search-icon" src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/search-icon.png" />
             </div>
             <div class="filters purpose-filter">
-                <button>웨딩 촬영</button>
-                <button>토탈 촬영</button>
-                <button>세미 촬영</button>
-                <button>가봉 스냅</button>
-                <button>데이트 스냅</button>
+                <button class="purpose-btn">웨딩 촬영</button>
+                <button class="purpose-btn">토탈 촬영</button>
+                <button class="purpose-btn">세미 촬영</button>
+                <button class="purpose-btn">가봉 스냅</button>
+                <button class="purpose-btn">데이트 스냅</button>
             </div>
             <div class="filters style-filter">
                 <p>스타일</p>
-                <button>인물 중심</button>
-                <button>배경 조화</button>
-                <button>인물+배경</button>
+                <button class="tag-btn">인물 중심</button>
+                <button class="tag-btn">배경 조화</button>
+                <button class="tag-btn">인물+배경</button>
             </div>
             <div class="filters price-filter">
                 <p>금액대</p>
-                <button>Basic</button>
-                <button>Standard</button>
-                <button>Premium</button>
-                <button>High end</button>
+                <button class="tag-btn">Basic</button>
+                <button class="tag-btn">Standard</button>
+                <button class="tag-btn">Premium</button>
+                <button class="tag-btn">High end</button>
             </div>
             <!-- <div class="more-filter">
                 <span>더 많은 검색 필터
@@ -82,10 +82,10 @@
             </div> -->
             <div class="filters possible-filter">
                 <p>촬영가능</p>
-                <button>정원</button>
-                <button>야간</button>
-                <button>로드</button>
-                <button>반려동물</button>
+                <button class="tag-btn">정원</button>
+                <button class="tag-btn">야간</button>
+                <button class="tag-btn">로드</button>
+                <button class="tag-btn">반려동물</button>
             </div>
          </section>
 
