chore : [FE] 견적서 세부페이지 css 수정

--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -11,7 +11,7 @@
     <body>
         <div id="header-placeholder"></div>
         <div class="container">
-        <div class="hd__inner960">
+        <div class="hd__inner1100">
             <div class="banner">
                 <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</ㅔ>
                 <p>스드메 견적을 간편하게 확인할 수 있어요</p>
@@ -108,46 +108,42 @@
                     <h2>선택하신 목록</h2>
                     <div class="list">
                         <div class="list-main">
-                            <img src="../../assets/images/estimateDetails2.png" alt="목록사진">
-                            <div class="item-main">
-                                <span>S 스튜디오</span>
-                                <span>330,000원</span>
+                            <div class="imgg">
+                                <img src="../../assets/images/estimateDetails2.png" alt="목록사진">
                             </div>
-                        </div>
-                        <div class="items">
-                            <div class="item">
-                                <span>수정 데이터</span>
-                                <span>165,000원</span>
-                            </div>
-                            <div class="item">
-                                <span>플라리 촬영</span>
-                                <span>150,000원</span>
-                            </div>
-                            <div class="item">
-                                <span>야간 촬영</span>
-                                <span>110,000원</span>
+                            <div class="pic-right">
+                                <div class="items">
+                                    <div class="item">
+                                        <span>S 스튜디오</span>
+                                        <span>330,000원</span>
+                                    </div>
+                                    <div class="item">
+                                        <span>· 수정 데이터</span>
+                                        <span>165,000원</span>
+                                    </div>
+                                    <div class="item">
+                                        <span>· 플라리 촬영</span>
+                                        <span>150,000원</span>
+                                    </div>
+                                    <div class="item">
+                                        <span>· 야간 촬영</span>
+                                        <span>110,000원</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="bottom">
-                        <div class="price">
-                            <div class="item total">
-                                <span>정상가</span>
-                                <span>755,000원</span>
-                            </div>
-                            <div class="item total">
-                                <span>쿠폰/선 할인가격</span>
-                                <span>-0원</span>
-                            </div>
-                            <div class="item total">
-                                <span>최종 금액</span>
-                                <span>755,000원</span>
-                            </div>
+                    <div class="price">
+                        <div class="total1">
+                            <span>정상가</span><span>330,000원</span>
                         </div>
-                        <div class="btn-container">
-                            <button class="btn">이전</button>
-                            <button class="btn">다음으로</button>
+                        <div class="total2">
+                            <span>쿠폰/포인트 할인가</span><span class="color">-0원</span>
                         </div>
+                        <div class="total3">
+                            <span>최종 금액</span><span>330,000원</span>
+                        </div>
+                        <a href="#" class="button">다음으로</a>
                     </div>
                 </div>   
                 <div class="note">
