feat : [FE] 로그인생성js  및 패스워드 생성js

--- a/html/login/passwordJoin.html
+++ b/html/login/passwordJoin.html
@@ -37,9 +37,9 @@
             <br />
             <div class="check">
                  <label for="upper" id = "up1">대소문자</label><input type ="checkbox" id ="upper" disabled checked/>
-                 <label for="num">숫자</label><input type ="checkbox" id ="small" disabled checked/>
-                 <label for="special">특수문자</label><input type ="checkbox" id ="special" disabled checked/>
-                 <label for="limit">8-20자 이내</label><input type ="checkbox" id ="limit" disabled checked/>
+                 <label for="num" id ="up2">숫자</label><input type ="checkbox" id ="num" disabled checked/>
+                 <label for="special" id ="up3">특수문자</label><input type ="checkbox" id ="special" disabled checked/>
+                 <label for="limit" id="up4">8-20자 이내</label><input type ="checkbox" id ="limit" disabled checked/>
                  <label>&nbsp;</label>
                  <br/>
             </div>           
@@ -51,7 +51,7 @@
             </div>
             <br />
             <div class ="check">
-                <label for="checkset">비밀번호일치</label><input type ="checkbox" id="checkset" disabled checked/>
+                <label for="checkset" id="up5">비밀번호일치</label><input type ="checkbox" id="checkset" disabled checked/>
                 <label >&nbsp;</label>
             </div>
         </div>
