fix: [FE] footer 적용 태그 변경

--- a/html/admin/customerList.html
+++ b/html/admin/customerList.html
@@ -147,6 +147,6 @@
                 </section>
             </main>
         </div>
-        <footer id="footer-placeholder"></footer>
+        <div id="footer-placeholder"></div>
     </body>
 </html>
