--- a/html/admin/customerDetail.html
+++ b/html/admin/customerDetail.html
@@ -216,6 +216,6 @@
                 </section>
             </main>
         </div>
-        <footer id="footer-placeholder"></footer>
+        <div id="footer-placeholder"></div>
     </body>
 </html>
