chore : [FE] design change

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -228,7 +228,7 @@
                 </div>
               </div>
             </div>
-            <div class="tabs hd__inner960">
+            <div class="tabs">
               <div id="horizontal-underline"></div>
               <div class="tab" id="studio"><a class="">스튜디오</a></div>
               <div class="tab" id="dress"><a class="">드레스</a></div>
@@ -419,5 +419,5 @@
       </div>
     </div>
   </body>
-    <footer id="footer-placeholder"></footer>
+  <div id="footer-placeholder"></div>
 </html>
