chore : [FE] design change

--- a/html/mypage/LikeList.html
+++ b/html/mypage/LikeList.html
@@ -54,24 +54,25 @@
           <section class="List" id="LikeList-section1">
             <div class="List-content">
               <h2>MY LIKE</h2>
+              <div></div>
             </div>
           </section>
 
-          <!-- 2.서치 바 기능 -->
-          <section class="search-bar" id="LikeList-section2">
+          <!-- 2.서치, nav 바 기능 -->
+        </div>
+        <section class="search-bar" id="LikeList-section2">
+          <div class="company-kind">
+            <div class="studio">스튜디오</div>
+            <div class="dress">드레스</div>
+            <div class="makeUp">메이크업</div>
             <div class="List-search-bar">
-              <img
-                src="../../assets/images/search-icon.png"
-                alt="searchImage"
-              />
               <input type="search" id="List-search-box" />
               <button id="List-searh-button">Search</button>
             </div>
-          </section>
-        </div>
+          </div>
+        </section>
         <!-- 3. 카드 리스트 -->
         <section class="Card-List" id="LikeList-section3">
-          <br /><br />
           <div class="LikeList-Card-List">
             <div class="LikeList-Card">
               <img
